more spacing fixes

--- a/css/main.scss
+++ b/css/main.scss
@@ -664,7 +664,7 @@ section{
     }
 }
 .repoButton{
-    padding: 16px;
+    padding: 12px 16px;
     background: rgba($mainBlue, 0.03);
     border-top: 1px solid $purpleBorder;
     margin-top: -1px;
